--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bson": "^6.8.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "memory-pager": "^1.5.0",
     "mongodb": "^6.8.0",
